removed --enable-preview, bumped jdk requirement to 22+