@@ -21,7 +21,6 @@
                 <configuration>
                     <executable>java</executable>
                     <arguments>
-                        <argument>--enable-preview</argument>
                         <argument>-classpath</argument>
                         <classpath />
                         <argument>${exec.mainClass}</argument>
